--- a/themes/husserl/package.json
+++ b/themes/husserl/package.json
@@ -5,6 +5,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^6.0.0",
     "gulp-sass-glob": "^1.1.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "sass": "1.75"
   }
 }
